<resources>
    <string name="app_name">MelodIA</string>
    <string name="titleText">CONFIGURACIÓN</string>
    <string name="language">IDIOMA</string>
    <string name="volumeButton" >VOLUMEN</string>
    <string name="acerca_de" >A CERCA DE...</string>
    <string name="como_crear_musica">¿CÓMO CREAR MÚSICA?</string>
    <string name="sobre_nosotros">SOBRE NOSOTROS...</string>
    <string name="sobre_la_app">SOBRE LA APP</string>
    <string name="descubrir">DESCRUBIR</string>
    <string name="hint_que_quieres">¿QUE QUIERES ESCUCHAR HOY?</string>
    <string name="listado">LISTADO</string>
    <string name="contrasena">CONTRASEÑA</string>
    <string name="correo">CORREO</string>
    <string name="ingresar">INGRESAR</string>
    <string name="olvidaste_contrasena">¿OLVIDASTE TU CONTRASEÑA?</string>
    <string name="fuimonos">¡FUIMONOS!</string>
    <string name="no_tienes_cuenta">¿NO TIENES CUENTA? \nCREA UNA Y DISFRUTA DE LO QUE PUEDES CREAR</string>
    <string name="confirmar">CONIRMAR</string>
    <string name="hint_confirmar_contrasena">CONFIRMAR CONTRASEÑA</string>
    <string name="mis_melodias">MIS MELODÍAS</string>
    <string name="perfil">PERFIL</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
    <string name="registro">REGRISTRO</string>
    <string name="exportar">EXPORTAR</string>
    <string name="archivos">ARCHIVOS</string>
    <string name="fill_all_fields">POR FAVOR COMPLETAR LOS CAMPOS</string>
    <string name="redirect_to_recovery">REDIRIGIR A RECUPERACION DE CONRASEÑA</string>
    <string name="fill_both_fields">RELLENA AMBOS CAMPOS</string>
    <string name="passwords_do_not_match">LAS CONTRASEÑAS NO COINCIDEN</string>
    <string name="password_updated">CONTRASEÑA ACTUALIZADA</string>
    <string name="error_update_password">ERROR</string>
    <string name="user_not_authenticated">USUARIO NO AUTENTICADO</string>
    <string name="registration_successful">REGISTRO EXITOSO</string>
    <string name="registration_error">ERROR</string>
    <string name="empty_prompt">ESCRIBE UN MENSAJE PARA GENERAR MUSICA </string>
    <string name="composing_music">COMPONIENDO MELODIA ♪♪, POR FAVOR ESPERA</string>
    <string name="music_ready">¡MÚSICA LISTA, QUE EMPIECE LA FIESTA! ♪♪</string>
    <string name="music_error">ERROR AL COMPONER MUSICA</string>
    <string name="track_not_found">NO SE PUEDE OBTENER LA PISTA :(</string>
    <string name="network_error">ERROR DE LA RED: %1$s</string>
    <string name="unexpected_status">ESTADO INESPERADO: %1$s</string>
    <string name="error_message">ERROR: %1$s</string>
    <string name="language2">ESPAÑOL</string>
    <string name="recuperarcontra">RECUPERAR COTRASEÑA</string>
    <string name="enviocorreo">ENVIAR CORREO</string>
    <string name="volverallogin">VOLVER AL LOGIN</string>
    <string name="delay">🎶 ESTO ESTÁ TARDANDO UN POCO... ¡GRACIAS POR ESPERAR!</string>
</resources>