<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A854AB"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titleText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bagelfont"
        android:shadowColor="#F90370"
        android:shadowDx="15"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/perfil"
        android:textColor="#010542"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exportarButton"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_marginBottom="300dp"
        android:background="#F49194"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/cerrar_sesion"
        android:textColor="#FFDF8E"
        android:textSize="24sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/archivoButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/archivoButton"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_marginTop="48dp"
        android:background="#7BEEAF"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/contrasena"
        android:textColor="#BC724F"
        android:textSize="24sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText3"
        app:layout_constraintVertical_bias="0.27" />

</androidx.constraintlayout.widget.ConstraintLayout>