<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5B926"
    >

    <TextView
        android:id="@+id/A_cerca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bagelfont"
        android:shadowColor="#FFFB8E"
        android:shadowDx="15"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/acerca_de"
        android:textColor="#010542"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="Volver"
        android:focusable="true"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintEnd_toStartOf="@+id/A_cerca"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_marginTop="48dp"
        android:text="@string/como_crear_musica"
        android:fontFamily="@font/baloo"
        android:textSize="24sp"
        android:textColor="#BC724F"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:background="#7BEEAF"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/A_cerca"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:background="#F49194"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/sobre_nosotros"
        android:textColor="#FFDF8E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option1" />


</androidx.constraintlayout.widget.ConstraintLayout>