<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    >

    <ImageView
        android:id="@+id/imagenEncima"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_image"
        android:scaleType="centerCrop" />

    <!-- Título "Ingresar" -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerLogin"
        android:layout_width="278dp"
        android:layout_height="572dp"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_transparent_bg"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495">

        <TextView
            android:id="@+id/tvForgotPassword4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="216dp"
            android:layout_marginEnd="168dp"
            android:fontFamily="@font/baloo"
            android:text="@string/contrasena"
            android:textColor="#F5942E"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvForgotPassword3"
            android:layout_width="84dp"
            android:layout_height="30dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="176dp"
            android:fontFamily="@font/baloo"
            android:text="@string/correo"
            android:textColor="#F5942E"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bagelfont"
            android:shadowColor="#60F1A4"
            android:shadowDx="15"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/ingresar"
            android:textColor="#F90370"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="96dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="#F5942E"
            android:fontFamily="@font/baloo"
            android:hint="@string/correo"
            android:textColorHint="#FFEB3B"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:textColor="#D9FFEB3B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginTitle" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/baloo"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:textColor="#FFEB3B"
            android:textColorHint="#FFEB3B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <Button
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:fontFamily="@font/baloo"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/olvidaste_contrasena"
            android:textColor="#FFF78E80"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#F90370"
            android:fontFamily="@font/baloo"
            android:paddingHorizontal="40dp"
            android:paddingVertical="12dp"
            android:text="@string/fuimonos"
            android:textColor="#7BEEAF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

        <!-- Crear una cuenta -->
        <Button
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:fontFamily="@font/baloo"
            android:text="@string/no_tienes_cuenta"
            android:textAlignment="center"
            android:textColor="#FFC107"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>