<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    >

    <ImageView
        android:id="@+id/imagenEncima"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_image"
        android:scaleType="centerCrop" />

    <!-- Título "Ingresar" -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerLogin"
        android:layout_width="278dp"
        android:layout_height="572dp"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_transparent_bg"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495">

        <TextView
            android:id="@+id/tvForgotPassword3"
            android:layout_width="84dp"
            android:layout_height="30dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="176dp"
            android:fontFamily="@font/baloo"
            android:text="@string/correo"
            android:textColor="#F5942E"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bagelfont"
            android:shadowColor="#60F1A4"
            android:shadowDx="15"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/recuperarcontra"
            android:textColor="#F90370"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnSendReset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/etForgotEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="#F5942E"
            android:fontFamily="@font/baloo"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:textColor="#D9FFEB3B"
            android:textColorHint="#FFEB3B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginTitle" />

        <Button
            android:id="@+id/btnSendReset"
            android:layout_width="178dp"
            android:layout_height="50dp"
            android:layout_marginBottom="204dp"
            android:backgroundTint="#F90370"
            android:fontFamily="@font/baloo"
            android:paddingHorizontal="40dp"
            android:paddingVertical="12dp"
            android:text="@string/enviocorreo"
            android:textColor="#7BEEAF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnBackToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="108dp"
            android:backgroundTint="#F90370"
            android:fontFamily="@font/baloo"
            android:paddingHorizontal="40dp"
            android:paddingVertical="12dp"
            android:text="@string/volverallogin"
            android:textColor="#7BEEAF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSendReset" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>